UI Testing and SEO

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IDDO</title>
+    <link rel="icon" href="img/jack.webp">
+
+    <!-- SEO -->
+    <title>IDDO | One Page Website</title>
+    <meta name="description" content="IDDO is a one page website build using PSD and CSS 12 grid layout using Flexbox and Grid with Responsive and jQuery.">
+
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.css" media="print" onload="this.media='screen'">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 </head>
 <body id="home">
 <header>
@@ -39,10 +44,10 @@
 <div class="banner" role="banner">
     <div class="container">
         <div class="video">
-            <video src="s" controls width="1170" height="658"></video>
+            <video src="https://tutorial.techaltum.com/images/techaltum.mp4" controls width="1170" height="658"></video>
             <div class="video-text">
                 <div class="flex align-center">
-                    <div><button><span class="fa fa-play-circle-o"></span></button></div>
+                    <div><button aria-label="Play Video"><span class="fa fa-play-circle-o"></span></button></div>
                     <div>
                         <p>Let me show you a few things</p>
                         <a href="">Click to play video</a>
@@ -189,7 +194,7 @@
                 </div>
             </div>
         </div> 
-        <button class="seemore"><span class="fa fa-plus-circle"></span></button> 
+        <button aria-label="View More" class="seemore"><span class="fa fa-plus-circle"></span></button> 
     </div>
 </section>
 <div class="wrap-6">
@@ -248,9 +253,9 @@
                     <img src="img/michael.webp" alt="michael" width="170" height="170" loading="lazy">
                     <div class="social">
                         <ul class="flex">
-                            <li><a href=""><span class="fa fa-twitter"></span></a></li>
-                            <li><a href=""><span class="fa fa-facebook"></span></a></li>
-                            <li><a href=""><span class="fa fa-instagram"></span></a></li>
+                            <li><a href="" aria-label="Twitter"><span class="fa fa-twitter"></span></a></li>
+                            <li><a href="" aria-label="Facebook"><span class="fa fa-facebook"></span></a></li>
+                            <li><a href="" aria-label="Instagram"><span class="fa fa-instagram"></span></a></li>
                         </ul>
                     </div>
                     <div class="gap">
@@ -265,9 +270,9 @@
                     <img src="img/michael.webp" alt="michael" width="170" height="170" loading="lazy">
                     <div class="social">
                         <ul class="flex">
-                            <li><a href=""><span class="fa fa-twitter"></span></a></li>
-                            <li><a href=""><span class="fa fa-facebook"></span></a></li>
-                            <li><a href=""><span class="fa fa-instagram"></span></a></li>
+                            <li><a href="" aria-label="Twitter"><span class="fa fa-twitter"></span></a></li>
+                            <li><a href="" aria-label="Twitter"><span class="fa fa-facebook"></span></a></li>
+                            <li><a href="" aria-label="Twitter"><span class="fa fa-instagram"></span></a></li>
                         </ul>
                     </div>
                     <div class="gap">
@@ -282,9 +287,9 @@
                     <img src="img/michael.webp" alt="michael" width="170" height="170" loading="lazy">
                     <div class="social">
                         <ul class="flex">
-                            <li><a href=""><span class="fa fa-twitter"></span></a></li>
-                            <li><a href=""><span class="fa fa-facebook"></span></a></li>
-                            <li><a href=""><span class="fa fa-instagram"></span></a></li>
+                            <li><a href="" aria-label="Twitter"><span class="fa fa-twitter"></span></a></li>
+                            <li><a href="" aria-label="Twitter"><span class="fa fa-facebook"></span></a></li>
+                            <li><a href="" aria-label="Twitter"><span class="fa fa-instagram"></span></a></li>
                         </ul>
                     </div>
                     <div class="gap">
@@ -346,7 +351,7 @@
                 </div>
             </div>
         </div>
-        <button class="seemore"><span class="fa fa-plus-circle"></span></button>  
+        <button aria-label="View More" class="seemore"><span class="fa fa-plus-circle"></span></button>  
     </div>    
 </section>
 <div class="wrap-8">
@@ -457,14 +462,14 @@
                 <h2>CONTACT US.</h2>
                 <address>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, tempora?</address>
                 <p class="social2">
-                    <a href=""><span class="fa fa-twitter"></span></a>
-                    <a href=""><span class="fa fa-facebook"></span></a>
-                    <a href=""><span class="fa fa-google-plus"></span></a>
-                    <a href=""><span class="fa fa-pinterest"></span></a>
-                    <a href=""><span class="fa fa-instagram"></span></a>
-                    <a href=""><span class="fa fa-youtube-play"></span></a>
-                    <a href=""><span class="fa fa-skype"></span></a>
-                    <a href=""><span class="fa fa-dribbble"></span></a>
+                    <a aria-label="Twitter" href=""><span class="fa fa-twitter"></span></a>
+                    <a aria-label="Twitter" href=""><span class="fa fa-facebook"></span></a>
+                    <a aria-label="Twitter" href=""><span class="fa fa-google-plus"></span></a>
+                    <a aria-label="Twitter" href=""><span class="fa fa-pinterest"></span></a>
+                    <a aria-label="Twitter" href=""><span class="fa fa-instagram"></span></a>
+                    <a aria-label="Twitter" href=""><span class="fa fa-youtube-play"></span></a>
+                    <a aria-label="Twitter" href=""><span class="fa fa-skype"></span></a>
+                    <a aria-label="Twitter" href=""><span class="fa fa-dribbble"></span></a>
                 </p>
             </div>
         </div>
@@ -481,7 +486,7 @@
 <footer class="wrap-13">
     <div class="container">
         <p>IDDO</p>
-        <button class="top"><span class="fa fa-chevron-up"></span></button>
+        <button class="top" aria-label="Go to Top"><span class="fa fa-chevron-up"></span></button>
     </div>
 </footer>
 <div class="popupform">
@@ -494,98 +499,8 @@
     </form>
 </div>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/bxslider@4.2.17/dist/jquery.bxslider.min.js"></script>
-<script>
-    AOS.init();
-    
-$(function(){
-    $(".menu").click(function(){
-        $(this).toggleClass("active");
-        $(".collapse").slideToggle();
-        
-    });  
-
-    if(screen.width<768){
-        $(".collapse nav a").click(function(){
-            $(".menu").removeClass("active");
-            $(".collapse").slideUp(0);
-        })
-    }
-
-
-    $(".video a, .video button").click(function(e){
-        $(".video video").css({opacity:1});
-        $(".video .flex").css({display:"none"});
-    });
-
-    $("#work .btn").click(function(){
-        $("#work .btn").removeClass("active");
-        $(this).addClass("active");
-
-        if( $(this).text()=="All" ){
-            $(".work").fadeIn();
-        }
-        else if( $(this).text()=="Website" ){
-            $(".work").fadeOut(0);
-            $(".web").fadeIn();
-        }
-        else if( $(this).text()=="Branding" ){
-            $(".work").fadeOut(0);
-            $(".brand").fadeIn();
-        }
-    });
-
-
-    $(".accordion a").click(function(e){
-        e.preventDefault();
-        if($(this).hasClass("active")){
-            $(this).removeClass("active");   
-            $(this).next("p").slideUp()
-        }
-        else{
-            $(".accordion a").removeClass();
-            $(".accordion p").slideUp();
-            $(this).addClass("active");
-            $(this).next("p").slideDown();
-        }
-    });
-
-    $(".top").click(function(){
-        $(window).scrollTop(0)
-    })
-
-    $(".wrap-7 .seemore").click(function(){
-        $(this).children("span").toggleClass("fa-minus-circle")
-        $(".wrap-7 .col-4:nth-child(4),.wrap-7 .col-4:nth-child(5),.wrap-7 .col-4:nth-child(6)").slideToggle();
-    });
-
-    $(".signup").click(function(){
-        $("body").append(`<div class="overlay"></div>`);
-        $("body").append(`<div class="popup"></div>`);
-        $(".popup").append($(".popupform").html());
-
-        $(".overlay, .cross").click(function(){
-            $(".overlay").remove();
-            $(".popup").remove();
-        });
-        $(window).keyup(function(e){
-            if(e.which==27){ 
-                $(".overlay").remove();
-                $(".popup").remove();
-            }
-        })
-    });
-
-    $(".reviews").bxSlider({
-        auto:true,
-        pause:5000,
-        controls:false
-    });
-
-
-
-});
-</script>
+<script src="js/common.js"></script>
 </body>
 </html>
